--- a/scheduler/package.json
+++ b/scheduler/package.json
@@ -9,6 +9,7 @@
   "author": "Vatras",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
