--- a/scheduler/package.json
+++ b/scheduler/package.json
@@ -15,7 +15,8 @@
     "jwt-simple": "^0.5.1",
     "pg": "6.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "4.3.0"
+    "sequelize": "4.3.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
