--- a/scheduler/package.json
+++ b/scheduler/package.json
@@ -9,6 +9,7 @@
   "author": "Vatras",
   "license": "ISC",
   "dependencies": {
+    "basic-auth": "^2.0.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
@@ -16,7 +17,8 @@
     "pg": "6.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "4.3.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "which-browser": "^0.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
